--- a/NekoChxn.csproj
+++ b/NekoChxn.csproj
@@ -1,8 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <PackageId>NekoChxn</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>VenNeptury</Authors>
+    <Company>Neko-Chxn</Company>
   </PropertyGroup>
 
   <ItemGroup>
