--- a/NekoChxn.csproj
+++ b/NekoChxn.csproj
@@ -3,9 +3,12 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <PackageId>NekoChxn</PackageId>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     <Authors>VenNeptury</Authors>
     <Company>Neko-Chxn</Company>
+    <Description>A https://neko-chxn.xyz Wrapper</Description>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Copyright>VenNeptury</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
